manifests/registry/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
      - name: registry
        image: registry:2.8.1
        ports:
        - containerPort: 5000
        - containerPort: 5001
        volumeMounts:
        - name: registry-config
          mountPath: /etc/docker/registry
          readOnly: true
        - name: registry-htpasswd-secret
          mountPath: /auth
          readOnly: true
      volumes:
      - name: registry-config
        configMap:
          name: registry-config
          items:
          - key: config.yml
            path: config.yml
      - name: registry-htpasswd-secret
        secret:
          secretName: registry-htpasswd-secret
